# fix-life

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  WEEKLY_SUMMARY_DEPLOYMENT.md  deploy.sh  plan-system-design.md
backend/: .env.example  .gitignore  CELERY.md  alembic.ini  celery.sh  create_test_user.py  logs-celery.sh  pyproject.toml  requirements-backup.txt  requirements-prod-clean.txt  requirements-prod.txt  requirements.txt  start-celery.sh  start.sh  stop-celery.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_monthly_plans.py  003_add_daily_plans.py  004_update_daily_plan_fields.py  005_remove_busyness_level.py  20260118_1533_add_user_timestamps.py  20260118_1546_add_verification_codes_table.py  20260118_2222_add_user_avatar_and_bio.py  20260120_1433_f37f0e0a437c_add_daily_summaries_table.py  20260120_2343_5b3ecf618809_add_avatar_data_columns.py  20260524_1200_add_task_context.py  (+22 more)
backend/app/: main.py
backend/tests/: conftest.py  test_admin_users.py  test_backlog_progress_sync.py  test_change_password_force.py  test_ip_ban_admin.py  test_ip_rate_limit.py  test_login_lockout.py  test_mcp_api_keys.py  test_mcp_daily_progress.py  test_mcp_github_issue_prompt.py  test_mcp_github_issue_skill.py  test_mcp_reflect.py  test_mcp_todo.py  test_media_token.py  test_quick_note_delete.py  test_quick_note_image_upload.py  test_quick_note_media.py  test_quick_note_merge.py  test_quick_note_search.py  test_quick_notes.py  test_quick_notes_permissions.py  test_rbac_service.py  test_system_status.py  test_user_seed.py  test_wechat_bind.py
(+375 files in other folders)
